--- a/src/main/resources/assets/mekanismrepowered/models/block/transformer_interface_east.json
+++ b/src/main/resources/assets/mekanismrepowered/models/block/transformer_interface_east.json
@@ -1,7 +1,7 @@
 {
     "parent": "minecraft:block/cube_all",
     "textures": {
-        "north": "mekanismrepowered:block/transformer_interface",
+        "east": "mekanismrepowered:block/transformer_interface",
         "all": "mekanismrepowered:block/transformer_casing"
     }
 }
