--- a/gradle.properties
+++ b/gradle.properties
@@ -57,3 +57,6 @@ mod_group_id=net.soulsandstormer.mekanismrepowered
 mod_authors=soulsandstormer
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=A mod expanding on the raw power of mekanism!
+
+#mekanism dependency version
+mekanism_version=1.20.1-10.4.0.14
