--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,9 @@ pluginManagement {
 plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.7.0'
 }
+
+buildCache {
+    local {
+        enabled = true
+    }
+}
